--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,3 @@
+<%= display_flash :notice %>
 <%= image_tag 'background.jpg', size: "1200x600", align: "middle" %>
+<%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary"%>
