--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -25,7 +25,7 @@
     <%= error_for :password_confirmation, @user.errors %>
     <br>
 
-    <%= form.submit 'Register', class: 'btn btn-block btn-default' %>
+    <%= form.submit 'Register', class: 'btn btn-block btn-success' %>
    <% end %>
 
   </div>
