--- a/app/views/artists/_artist.html.erb
+++ b/app/views/artists/_artist.html.erb
@@ -3,7 +3,12 @@
   <td>
   <div class="btn-group">
     <%= link_to 'Edit', edit_artist_path(artist), class: 'btn btn-sm btn-primary' %>
+    <% if artist.user_id == current_user.id %>
     <%= link_to 'Delete', artist_path(artist), method: :delete, data: {confirm: "Are you sure?"}, class: 'btn btn-sm btn-danger' %>
     </div>
+    <% else %>
+        <%= link_to 'Delete', artist_path(artist), method: :delete, data: {confirm: "Are you sure?"}, class: 'btn btn-sm btn-danger disabled' %>
+    </div>
+    <% end %>
   </td>
 </tr>
