--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -42,7 +42,13 @@
           <ul class="dropdown-menu">
             <li><a href="#">Profile</a></li>
             <li role="separator" class="divider"></li>
-            <li><%= link_to "Log out", login_path %></li>
+            <% if current_user.admin? %>
+            <li><%= link_to 'Dashboard', admin_dashboard_path %></li>
+            <% end %>
+            <% if current_user.superadmin? %>
+            <li><%= link_to 'Dashboard', superadmin_dashboard_path %></li>
+            <% end %>
+            <li><%= link_to 'Logout', logout_path, method: :delete %></li>
           </ul>
         </li>
         <% else %>
