Adding favorite tracks and glyphicons

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,7 +8,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">JASNA</a>
+                <a class="navbar-brand" href="#">
+                    <img src="http://www.iconsdb.com/icons/preview/white/note-xxl.png" style="height: 25px" alt="">
+                </a>
+</a> 
+
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
