--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -3,6 +3,9 @@
     <p><strong>Name:</strong></p>
     <p><%= @artist.name %></p>
     <br>
+    <p><strong>Cover:</strong></p>
+    <p><%= image_tag(@artist.picture) %></p>
+    <br>
   </div>
 </div>
 
