--- a/app/views/admin/artists/_form.html.erb
+++ b/app/views/admin/artists/_form.html.erb
@@ -3,5 +3,9 @@
   <%= form.text_field :name, class: 'form-control' %>
   <%= error_for :name, @artist.errors %>
   <br>
+  <%= form.label :picture, 'Picture link' %>
+  <%= form.text_area :picture, class: 'form-control' %>
+  <%= error_for :picture, @artist.errors %>
+  <br>
   <%= form.submit params[:action] == 'new' ? 'Save' : 'Update', class: 'btn btn-block btn-primary' %>
 <% end %>
