--- a/app/views/superadmin/albums/show.html.erb
+++ b/app/views/superadmin/albums/show.html.erb
@@ -6,6 +6,9 @@
     <p><strong>Year:</strong></p>
     <p><%= @album.year %></p>
     <br>
+    <p><strong>Cover:</strong></p>
+    <p><%=image_tag(@album.cover)%></p>
+    <br>
     <p><strong>Tracks:</strong></p>
     <table class="table">
       <thead>
