added top tracks and latest albums

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,36 @@
 <%= display_flash :notice %>
 <%= image_tag 'background.jpg', size: "1200x600", align: "middle" %>
 <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary"%>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Album</th>
+          <th>Artist</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @latest_albums.each do |album| %>
+  <tr>
+    <td><%= album.name %></td>
+    <td><%= album.artist.name %></td>
+  </tr>
+<% end %>
+</table>
+      </tbody>
+    </table>
+        <table class="table">
+      <thead>
+        <tr>
+          <th>Track</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @top_tracks.each do |track| %>
+  <tr>
+    <td><%= track.name %></td>
+  </tr>
+<% end %>
+</table>
+      </tbody>
+    </table>
+
