Working adding to playlist

--- a/app/views/tracks/_track.html.erb
+++ b/app/views/tracks/_track.html.erb
@@ -18,14 +18,38 @@
 <%= link_to track.youtubelink, class: 'btn btn-sm btn-primary', target: :_blank do %>
 <i class="glyphicon glyphicon-play"></i>&nbsp;
 <% end %>
+<p>Link 2</p>
+<a data-toggle="modal" data-target="#addTrackDialog" data-id="<%=track.id %>" title="Add this item" class="open-AddTrackDialog btn btn-primary" href="#addTrackDialog">test</a>
+
+<div class="modal fade" id="addTrackDialog">
+ <div class="modal-header">
+    <button class="close" data-dismiss="modal">×</button>
+    <h3>Modal header</h3>
+  </div>
+    <div class="modal-body">
+
+          <%= form_for PlaylistTrack.new, remote: true, url: track_playlists_path, method: :post, id: 'myForm' do |form| %>
+          <input id="trackId" name="trackId" type="hidden" />
+  	<%= form.collection_select :playlist_id, Playlist.all, :id, :name, { prompt: 'Choose Playlist' }, class: 'form-control' %>
+  	<br>
+  	<%= form.submit 'Save', method: :post, class: 'btn btn-block btn-primary' %>
+  	<% end %>
+        <p>some content</p>
+        <input type="text" name="trackId" id="trackId" value=""/>
+    </div>
+</div>
 <% unless current_user.playlists.first.nil? %>
 <%= link_to track_playlists_path(track_id: track.id, playlist_id: current_user.playlists.first.id), method: :post, class: 'btn btn-sm btn-primary' do %>
 <i class="glyphicon glyphicon-heart-empty"></i>&nbsp;
 <% end %>
 <% end %>
-<!-- Button trigger modal -->
-<a data-toggle="modal" href="#myModal" class="btn btn btn-danger">Add to playlist:</a>
+<%= link_to 'Add', add_to_playlist_path(track), {:remote => true, 'data-toggle' => "modal", :class => 'btn btn-primary btn-small', 'data-target' => '#myModal'} %>
 
+
+<div class="modal fade" id="modal-window" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
+
+<!-- Button trigger modal -->
+<a data-toggle="modal" href="#myModal" data-target="#myModal" class="btn btn btn-danger">Add to playlist:</a>
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -35,14 +59,16 @@
         <h4 class="modal-title">Choose Playlist</h4>
       </div>
       <div class="modal-body">
-          <%= form_for PlaylistTrack.new, url: track_playlists_path do |form| %>
+          <%= form_for PlaylistTrack.new, remote: true, url: track_playlists_path, method: :post, id: 'myForm' do |form| %>
+          <%= form.hidden_field :track_id, value: track.id %>
   	<%= form.collection_select :playlist_id, Playlist.all, :id, :name, { prompt: 'Choose Playlist' }, class: 'form-control' %>
   	<br>
   	<%= form.submit 'Save', method: :post, class: 'btn btn-block btn-primary' %>
   	<% end %>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+        <button id="myBtn", '$('#this').on('click', function() { $('#myForm').submit(); });', class="btn btn-primary">Save changes</button>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
