--- a/app/views/playlists/tracks.html.erb
+++ b/app/views/playlists/tracks.html.erb
@@ -1,11 +1,9 @@
 <div class="row">
-  <div class="col-md-6">
-    <p><strong>Name:</strong></p>
-    <p><%= @playlist.name %></p>
-    <br>
-    <p><strong>Tracks:</strong></p>
+  <div class="col-md-8">
+    <h1>Products</h1>
+
     <table class="table">
-      <thead>
+       <thead>
         <tr>
           <th>Name</th>
           <th>Duration</th>
@@ -16,9 +14,9 @@
         </tr>
       </thead>
       <tbody>
-        <%= render @playlist.playlist_tracks %>
+        <%= render @tracks %>
       </tbody>
     </table>
+
   </div>
 </div>
-
