--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,49 @@
 <%= display_flash :notice %>
-<%= image_tag 'background.jpg', size: "1200x600", align: "middle" %>
-<%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary"%>
+
+<!-- Carousel
+================================================== -->
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="item active">
+      <%= image_tag 'background.jpg' %>
+      <div class="container">
+        <div class="carousel-caption">
+        <h1 class="display-1">Favorite tracks and playlists</h1>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <%= image_tag 'background3.jpg' %>
+      <div class="container">
+        <div class="carousel-caption">
+          
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <%= image_tag 'background4.jpg' %>
+      <div class="container">
+        <div class="carousel-caption">
+          
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+    <div class="carousel-buttons">
+    <div class="col-xs-3 text-center"></div>
+    <div class="col-xs-3 text-center"><%= link_to "Log in", login_path, class: "btn btn-lg btn-primary btn-block"%></div>
+    <div class="col-xs-3 text-center"><%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary btn-block"%></div>
+    <div class="col-xs-3 text-center"></div>
+</div>
+ 
+  </div> 
+</div>
+  
+</div>
+<!-- /.carousel -->
     <table class="table">
       <thead>
         <tr>
