--- a/app/views/tracks/index.html.erb
+++ b/app/views/tracks/index.html.erb
@@ -9,7 +9,7 @@
         <p><%= flash[:notice] %></p>
       </div>
     <% end %>
-
+<%= will_paginate @tracks, renderer: BootstrapPagination::Rails %>
     <table class="table table-hover">
       <thead>
         <tr>
@@ -18,6 +18,7 @@
           <th>Genre</th>
           <th>Artist</th>
           <th>Album</th>
+          <th>Year</th>
           <th>Actions</th>
         </tr>
       </thead>
@@ -25,5 +26,54 @@
         <%= render @tracks %>
       </tbody>
     </table>
+  </div>
+  <div class="col-md-5">
+  <div class="panel panel-info">
+                <div class="panel-heading">
+                    <h3 class="panel-title">
+                        Latest albums</h3>
+                </div>
+  <table class="table">
+      <thead>
+        <tr>
+          <th>Album</th>
+          <th>Artist</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @latest_albums.each do |album| %>
+  <tr>
+    <td><%= album.name %></td>
+    <td><%= album.artist.name %></td>
+  </tr>
+<% end %>
+</tbody>
+</table>
+</div>
+
+  <div class="panel panel-info">
+                <div class="panel-heading">
+                    <h3 class="panel-title">
+                        Popular tracks</h3>
+                </div>
+</table>
+      </tbody>
+    </table>
+        <table class="table">
+      <thead>
+        <tr>
+          <th>Track</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @top_tracks.each do |track| %>
+  <tr>
+    <td><%= track.name %></td>
+  </tr>
+<% end %>
+</table>
+      </tbody>
+    </table>
+    </div>
   </div>
 </div>
