Added top tracks for artist

--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -8,4 +8,15 @@
     <br>
   </div>
 </div>
+<h3>Top tracks</h3>
+   <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>Name</th>
+        </tr>
+      </thead>
+      <tbody>
+        <%= render @top_tracks %>
+      </tbody>
+    </table>
 
