Added link if playlist collection is empty

--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -12,6 +12,7 @@
           <th>Genre</th>
           <th>Artist</th>
           <th>Album</th>
+          <th>Year</th>
           <th>Actions</th>
         </tr>
       </thead>
