--- a/app/views/tracks/_track.html.erb
+++ b/app/views/tracks/_track.html.erb
@@ -20,26 +20,8 @@
 <i class="glyphicon glyphicon-play"></i>&nbsp;
 <% end %>
 
-<a data-toggle="modal" data-target="#addTrackDialog" data-id="<%=track.id %>" title="Add this item" class="open-AddTrackDialog btn btn-sm btn-primary" href="#addTrackDialog">test</a>
+<a data-toggle="modal" data-target="#addTrackDialog" data-id="<%=track.id %>" title="Add this item" class="open-AddTrackDialog btn btn-sm btn-primary" href="#addTrackDialog">Add to playlist:</a>
 
 <div class="modal fade" id="addTrackDialog">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
- <div class="modal-header">
-    <button class="close" data-dismiss="modal">×</button>
-    <h3>Add to playlist</h3>
-  </div>
-    <div class="modal-body">
-    <% if current_user.playlists.exists? %>
-			<%= form_for PlaylistTrack.new, remote: true, url: track_playlists_path, method: :post, id: 'myForm' do |form| %>
-  		<input id="trackId" name="trackId" type="hidden" />
-  	<%= form.collection_select :playlist_id, Playlist.where(user_id: current_user.id), :id, :name, { prompt: 'Choose Playlist' }, class: 'form-control' %>
-  	<br>
-  	<%= form.submit 'Save', method: :post, class: 'btn btn-block btn-primary' %>
-  	<% end %>
-  	<% else %>
-  	<%= link_to "Create playlist", new_playlist_path %>
-  	<% end %>
-    </div>
-</div>
+<%= render 'modal' %>
 </div>
