--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -15,7 +15,11 @@
         <tr>
           <th>Name</th>
           <th>Duration</th>
-          <th></th>
+          <th>Genre</th>
+          <th>Artist</th>
+          <th>Album</th>
+          <th>Year</th>
+          <th>Actions</th>
         </tr>
       </thead>
       <tbody>
