--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -13,6 +13,12 @@
       <thead>
         <tr>
           <th>Name</th>
+          <th>Duration</th>
+          <th>Genre</th>
+          <th>Artist</th>
+          <th>Album</th>
+          <th>Year</th>
+          <th>Actions</th>
         </tr>
       </thead>
       <tbody>
