--- a/app/views/albums/_album.html.erb
+++ b/app/views/albums/_album.html.erb
@@ -1,12 +1,8 @@
 <tr>
   <td><%= link_to album.name, album_path(album) %></td>
   <td><%= album.year %></td>
-  <td><%= link_to album.artist.name, album_path(album.artist) %></td>
+  <td><%= link_to album.artist.name, artist_path(album.artist) %></td>
   <td><%= link_to album.genre.name, genre_path(album.genre) %></td>
   <td>
-  <div class="btn-group">
-    <%= link_to 'Edit', edit_album_path(album), class: 'btn btn-sm btn-primary' %>
-    <%= link_to 'Delete', album_path(album), method: :delete, data: {confirm: "Are you sure?"}, class: 'btn btn-sm btn-danger' %>
-    </div>
   </td>
 </tr>
