--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-7">
-    <h1>Albums <%= link_to 'Create new', new_album_path, class: 'btn btn-success' %></h1>
+    <h1>Albums</h1>
     <%= count_for @albums, 'Total:' %>
     <hr>
 
@@ -19,7 +19,6 @@
           <th>Year</th>
           <th>Artist</th>
           <th>Genre</th>
-          <th>Actions</th>
         </tr>
       </thead>
       <tbody>
