--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-7">
-    <h1>Artists <%= link_to 'Create new', new_artist_path, class: 'btn btn-success' %></h1>
+    <h1>Artists</h1>
     <%= count_for @artists, 'Total:' %>
     <hr>
 
