--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-7">
-    <h1>Genres <%= link_to 'Create new', new_genre_path, class: 'btn btn-success' %></h1>
+    <h1>Genres</h1>
     <%= count_for @genres, 'Total:' %>
     <hr>
 
