--- a/app/views/layouts/superadmin.html.erb
+++ b/app/views/layouts/superadmin.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-  <nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -19,26 +19,20 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">JASNA</a>
+                <a class="navbar-brand" href="#">
+                    <img src="http://www.iconsdb.com/icons/preview/white/note-xxl.png" style="height: 25px" alt="">
+                </a>
+</a> 
+
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Artists <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Popular</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
+        <li class="<%= 'active' if params[:action] == 'tracks' %>"><%= link_to 'Tracks', superadmin_tracks_path %></li>
+        <li class="<%= 'active' if params[:action] == 'artists' %>"><%= link_to 'Artists', superadmin_artists_path %></li>
+        <li class="<%= 'active' if params[:action] == 'albums' %>"><%= link_to 'Albums', superadmin_albums_path %></li>
+        <li class="<%= 'active' if params[:action] == 'genres' %>"><%= link_to 'Genres', superadmin_genres_path %></li>
       </ul>
       <form class="navbar-form navbar-left">
         <%= form_tag(tracks_path, method: 'get', class: 'navbar-form navbar-right') do %>
@@ -51,8 +45,13 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username %><span class="caret"></span></a>
           <ul class="dropdown-menu">
-             <li><%= link_to 'Dashboard', superadmin_dashboard_path %></li>
             <li role="separator" class="divider"></li>
+            <% if current_user.admin? %>
+            <li><%= link_to 'Dashboard', admin_dashboard_path %></li>
+            <% end %>
+            <% if current_user.superadmin? %>
+            <li><%= link_to 'Dashboard', superadmin_dashboard_path %></li>
+            <% end %>
             <li><%= link_to 'Logout', logout_path, method: :delete %></li>
           </ul>
         </li>
