--- a/app/views/superadmin/dashboards/show.html.erb
+++ b/app/views/superadmin/dashboards/show.html.erb
@@ -1,7 +1,20 @@
+<%= display_flash :notice %>
+
 <div class="jumbotron">
   <h1>Welcome superadmin!</h1>
-  <%= link_to 'Add tracks', new_superadmin_track_path, class: 'btn btn-danger' %>
-  <%= link_to 'Add albums', new_superadmin_album_path, class: 'btn btn-danger' %>
-  <%= link_to 'Add genres', new_superadmin_genre_path, class: 'btn btn-danger' %>
-  <%= link_to 'Add artists', new_superadmin_artist_path, class: 'btn btn-danger' %>
+  <hr>
+  <h2> Number of registered users: <%= @users.count %> </h2>
+  <hr>
+  <h2> Number of tracks: <%= @tracks.count %></h2>
+  <%= link_to 'Add track', new_superadmin_track_path, class: 'btn btn-danger' %>
+  <hr>
+  <h2> Number of albums: <%= @artists.count %></h2>
+  <%= link_to 'Add album', new_superadmin_album_path, class: 'btn btn-danger' %>
+  <hr>
+  <h2> Number of artists: <%= @artists.count %></h2>
+  <%= link_to 'Add artist', new_superadmin_artist_path, class: 'btn btn-danger' %>
+  <hr>
+  <h2> Number of genres: <%= @genres.count %></h2>
+  <%= link_to 'Add genre', new_superadmin_genre_path, class: 'btn btn-danger' %>
+  <hr>
 </div>
