--- a/app/views/tracks/_track.html.erb
+++ b/app/views/tracks/_track.html.erb
@@ -23,5 +23,5 @@
 <a data-toggle="modal" data-target="#addTrackDialog" data-id="<%=track.id %>" title="Add this item" class="open-AddTrackDialog btn btn-sm btn-primary" href="#addTrackDialog">Add to playlist:</a>
 
 <div class="modal fade" id="addTrackDialog">
-<%= render 'modal' %>
+<%= render 'shared/modal' %>
 </div>
