--- a/app/views/admin/artists/index.html.erb
+++ b/app/views/admin/artists/index.html.erb
@@ -12,7 +12,7 @@
     <% end %>
 
     <h3>Artist details</h3>
-
+    <%= will_paginate @artists, renderer: BootstrapPagination::Rails %>
     <table class="table table-hover">
       <thead>
         <tr>
