--- a/app/views/admin/tracks/index.html.erb
+++ b/app/views/admin/tracks/index.html.erb
@@ -12,7 +12,7 @@
     <% end %>
 
     <h3>Tracks details</h3>
-
+    <%= will_paginate @tracks, renderer: BootstrapPagination::Rails %>
     <table class="table table-hover">
       <thead>
         <tr>
