--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -11,7 +11,7 @@
     <% end %>
 
     <h3>Artist details</h3>
-
+    <%= will_paginate @albums, renderer: BootstrapPagination::Rails %>
     <table class="table table-hover">
       <thead>
         <tr>
