--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -5,4 +5,21 @@
     <br>
   </div>
 </div>
+<h3>Tracks</h3>
+   <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Duration</th>
+          <th>Genre</th>
+          <th>Artist</th>
+          <th>Album</th>
+          <th>Year</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <%= render @tracks %>
+      </tbody>
+    </table>
 
