--- a/app/views/tracks/index.html.erb
+++ b/app/views/tracks/index.html.erb
@@ -1,7 +1,5 @@
-<%= display_flash :notice %>
-
 <div class="row">
-  <div class="col-md-7">
+  <div class="col-md-8">
     <h1> Tracks </h1>
     <%= count_for @tracks, 'Total:' %>
     <hr>
@@ -29,7 +27,7 @@
       </tbody>
     </table>
   </div>
-  <div class="col-md-5">
+  <div class="col-md-4">
   <div class="panel panel-info">
                 <div class="panel-heading">
                     <h3 class="panel-title">
@@ -72,7 +70,7 @@
         <% @top_tracks.each do |track| %>
   <tr>
     <td><%= track.name %></td>
-    <td><%= Artist.where(artist_id: track.artist_id).name %></td>
+    <td><%= Artist.find(track.artist_id).name %></td>
   </tr>
 <% end %>
 </table>
