--- a/app/views/superadmin/tracks/_form.html.erb
+++ b/app/views/superadmin/tracks/_form.html.erb
@@ -7,13 +7,8 @@
   <%= form.text_area :duration, class: 'form-control' %>
   <%= error_for :duration, @track.errors %>
   <br>
-  <%= form.label :artist_id %>
-  <%= form.collection_select :artist_id, Artist.all, :id, :name, { prompt: 'Choose artist' }, class: 'form-control' %>
-  <%= error_for :artist, @track.errors %>
-  <br>
-  <%= form.label :album_id %>
-  <%= form.collection_select :album_id, Album.all, :id, :name, { prompt: 'Choose album' }, class: 'form-control' %>
-  <%= error_for :album, @track.errors %>
+  <%= form.label :album_id, 'Artist and album' %>
+  <%= form.grouped_collection_select :album_id, Artist.order(:name), :albums, :name, :id, :name, { prompt: 'Choose album' }, class: 'form-control' %>
   <br>
   <%= form.label :youtubelink, 'Youtube link' %>
   <%= form.text_area :youtubelink, class: 'form-control' %>
