--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,7 +1,6 @@
-<div class="row">
-  <div class="col-md-7">
+<div class="section">
+  <div class="col-md-3">
     <h1>Genres</h1>
-    <%= count_for @genres, 'Total:' %>
     <hr>
 
     <% unless flash[:notice].blank? %>
@@ -10,17 +9,21 @@
       </div>
     <% end %>
 
-    <h3>Genre details</h3>
-
-    <table class="table table-hover">
-      <thead>
+		<div class="table-responsive-vertical tbl-header">
+     <table cellpadding="0" cellspacing="0" border="0">
+      <thead>	
         <tr>
           <th>Name</th>
         </tr>
       </thead>
+      </table>
+      </div>
+      <div class="tbl-content">
+   	 <table cellpadding="0" cellspacing="0" border="0">
       <tbody>
         <%= render @genres %>
       </tbody>
     </table>
+  </div>
   </div>
 </div>
