--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
       <%= image_tag 'background.jpg' %>
       <div class="container">
         <div class="carousel-caption">
-        <h1 class="display-1">Favorite tracks and playlists</h1>
+        <h1 class="display-1">Favorite songs and playlists</h1>
         </div>
       </div>
     </div>
@@ -16,7 +16,7 @@
       <%= image_tag 'background3.jpg' %>
       <div class="container">
         <div class="carousel-caption">
-          
+        <h1 class="display-1">New songs added every day</h1> 
         </div>
       </div>
     </div>
@@ -24,7 +24,7 @@
       <%= image_tag 'background4.jpg' %>
       <div class="container">
         <div class="carousel-caption">
-          
+        <h1 class="display-1">Bring some music to your life</h1>    
         </div>
       </div>
     </div>
@@ -32,15 +32,16 @@
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
+  <br>
     <div class="carousel-buttons">
     <div class="col-xs-3 text-center"></div>
-    <div class="col-xs-3 text-center"><%= link_to "Log in", login_path, class: "btn btn-lg btn-primary btn-block"%></div>
-    <div class="col-xs-3 text-center"><%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary btn-block"%></div>
+    <div class="col-xs-3 text-center"><%= link_to "Log in", login_path, class: "btn btn-lg btn-primary btn-block btn-resp"%></div>
+    <div class="col-xs-3 text-center"><%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary btn-block btn-resp"%></div>
     <div class="col-xs-3 text-center"></div>
 </div>
- 
   </div> 
 </div>
   
 </div>
+<br>
 <!-- /.carousel -->
